--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ beautifulsoup4==4.10.0
 Django==3.2.9
 django-bootstrap-v5==1.0.11
 django-crispy-forms==1.14.0
+django-js-asset==2.0.0
 django-model-utils==4.2.0
+django-mptt==0.13.4
 django-quill-editor==0.1.40
 django-taggit==2.1.0
 django-widget-tweaks==1.4.12
